# mvneural

./: commit-message.txt
project/: CMakeLists.txt  makefile
project/inc/: CTextFileParser.h  NNeural.h  NStringTool.h
project/src/: CFileParser.cpp  CTextFileParser.cpp  NNeural.cpp  NStringTool.cpp  main.cpp
